fix: only add mutually exclusive description if there are multiple arguments in a lookup argument set (#83)
